# hex2bin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: release.yml
include/: version.h.in
resources/: version.rc.in
scripts/: build.bat  build.sh  package.sh
